# DataStructures

./: .gitignore  CMakeLists.txt  README.md
include/: Array.hpp  algorithm.hpp  core.hpp  simd.hpp  utility.hpp
include/dsa/: algorithm.hpp  array.hpp  core.hpp  simd.hpp  utility.hpp
tests/: CMakeLists.txt  test_array.cpp
